--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Celebrations</h1>
+    <h1>Next celebrations</h1>
     
     <section class="nextCelebrations slider" id="1">
         
