--- a/src/gospelcenter/LocationBundle/Resources/views/Admin/add.html.twig
+++ b/src/gospelcenter/LocationBundle/Resources/views/Admin/add.html.twig
@@ -18,17 +18,23 @@
 {% block adminBody %}
     <h1>Admin - Add a location</h1>
     
-    <form action="{{ path('gospelcenterAdmin_locations_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
+    <form class="location" action="{{ path('gospelcenterAdmin_locations_add', {'center': center.ref}) }}" method="post" {{ form_enctype(form) }}>
+        
+        <nav class="tools">
+    		<input type="submit" class="buttonRounded" />
+    	</nav>
+    	
+    	
+        
         {{ form_widget(form.name, {'attr': {'placeholder': 'Name'} }) }}
         {{ form_widget(form.address1, {'attr': {'placeholder': 'Address line 1'} }) }}
         {{ form_widget(form.address2, {'attr': {'placeholder': 'Address line 2'} }) }}
         {{ form_widget(form.postalCode, {'attr': {'placeholder': 'Postal code'} }) }}
         {{ form_widget(form.city, {'attr': {'placeholder': 'City'} }) }}
         {{ form_widget(form.country, {'attr': {'placeholder': 'Country'} }) }}
+        
         {{ form_rest(form) }}
-        <nav>
-    		<input type="submit" class="buttonRounded" />
-    	</nav>
+        
     </form>
     
     
