--- a/src/gospelcenter/LocationBundle/Resources/views/Admin/edit.html.twig
+++ b/src/gospelcenter/LocationBundle/Resources/views/Admin/edit.html.twig
@@ -18,7 +18,7 @@
 {% block adminBody %}
     <h1>Admin - Edit a location</h1>
     
-    <form action="{{ path('gospelcenterAdmin_locations_edit', {'center': center.ref, 'location': location.id}) }}" method="post" {{ form_enctype(form) }}>
+    <form class="location" action="{{ path('gospelcenterAdmin_locations_edit', {'center': center.ref, 'location': location.id}) }}" method="post" {{ form_enctype(form) }}>
         <nav class="tools">
     		<input type="submit" class="buttonRounded" />
     		<a href="{{ path('gospelcenterAdmin_locations_delete', {'center': center.ref, 'location': location.id}) }}" class="buttonRounded">Delete</a>
