--- a/src/gospelcenter/PageBundle/Resources/views/AdminSlide/add.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminSlide/add.html.twig
@@ -26,7 +26,7 @@
     	
     	{{ form_widget(form.image.file) }}
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
-        {{ form_widget(form.text, {'attr': {'placeholder': 'Text'} }) }}
+        {{ form_widget(form.text, {'attr': {'placeholder': 'Text', 'class': 'elastic'} }) }}
         {{ form_widget(form.link, {'attr': {'placeholder': 'Link'} }) }}
         {{ form_widget(form.labelLink, {'attr': {'placeholder': 'Link label'} }) }}
         {{ form_widget(form.page) }}
