--- a/src/gospelcenter/PageBundle/Resources/views/AdminPage/add.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/AdminPage/add.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/addPage-min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/form-min.js') }}"></script>
 {% endblock %}
 
 {% block stylesheets %}
@@ -25,7 +25,7 @@
     	
         {{ form_widget(form.ref) }}
         {{ form_widget(form.title, {'attr': {'placeholder': 'Title'} }) }}
-        {{ form_widget(form.slogan, {'attr': {'placeholder': 'Slogan'} }) }}
+        {{ form_widget(form.slogan, {'attr': {'placeholder': 'Slogan', 'class': 'elastic'} }) }}
         {{ form_widget(form.template) }}
         {{ form_widget(form.language) }}
         {{ form_rest(form) }}
