--- a/web/sass/layout.scss
+++ b/web/sass/layout.scss
@@ -379,6 +379,34 @@ div.arrow_up {
                 	    }
                     }
                     
+                    section.img {
+                        height: 100%;
+                    }
+                    
+                    section.details {
+                        padding: 0px;
+                        margin: 0px;
+                        margin-top: -70px;
+                        height: 70px;
+                        width: 100%;
+                        z-index: 100;
+                        padding-left: 0%;
+                        position: relative;
+                        @include gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.8), rgba(0,0,0,0.0));
+                        
+                        div {
+                            color: $white;
+                            padding-left: 4%;
+                            padding-right: 4%;
+                            width: 92%;
+                            display: block;
+                            position: absolute;
+                            bottom: 4%;
+                            left: 0px;
+                            text-align: left;
+                        }
+                    }
+                    
                     img {
                         height: 100%;
                     }
